# otus-cpp-project

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml  validate.yml
src/: CMakeLists.txt
src/bvh/: CMakeLists.txt  aabb.cpp  aabb.h  bvh.cpp  bvh.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/cli/: CMakeLists.txt  main.cpp  ppm.cpp  ppm.h
src/model/: CMakeLists.txt  material.h  mesh.h  model.cpp  model.h
src/render/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  raytracer.cpp  raytracer.h  reflect.cpp  reflect.h  renderer.cpp  renderer.h
src/utils/: CMakeLists.txt  image.h  ray.h  vertex.h
tests/: CMakeLists.txt
tests/bvh/: CMakeLists.txt  test_aabb_intersect.cpp  test_bvh.cpp
tests/render/: CMakeLists.txt  test_calculate_lighting.cpp  test_hit_triangle.cpp  test_reflect.cpp
tests/utils/: CMakeLists.txt  test_image.cpp  test_material.cpp
